--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "dev": "npm-run-all -s generate webpackDev",
-    "webpackDev": "webpack serve",
-    "build": "npm-run-all -s generate webpackBuild",
-    "webpackBuild": "webpack",
-    "generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHtml.js",
-    "previewDist": "node previewDist",
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
